# ibsys2SCM

./: .coverage  README.md  alembic.ini  class_diagram.puml  compose.yml  db_snapshot_20250322_1320.dump  input.xml  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: build.yaml
alembic/: env.py
alembic/versions/: 25dffe600017_add_polymorphic_item_and_process_models.py  3acac447370d_changed_table_name_demand_forecast.py  4badac6dd55e_added_many_tables_for_orders_as_well_as_.py  53b35ad43cab_create_process_overview_view.py  8cf12efb3775_add_unique_constraint_index_to_process_.py  ac41bfee71ba_changed_some_table_names.py  c5ee9a4a4401_changed_order_models.py  c6d99915b052_changed_foreign_keys_and_constraints.py
analysis/: planning_analysis_visualization.ipynb
analysis/.ipynb_checkpoints/: planning_analysis_visualization-checkpoint.ipynb
data/: 62_3_3result.xml
db/: scm.db
docs/: README.md  class_diagram.puml  class_structure.puml  flow.md  full_db_architecture.puml  material_flow.puml  process_example.mmd  simplified_production.mmd
extras/: ai_summary.py  summarize_project.py  summary.md  summary.txt
extras/data/: labour_machine_cost_clean.csv  material_cost_graph  material_costs_cleaned.csv  result.xml
extras/docs/: ai_summary.py.md
material/: calculate_required_resources.py  conftest.py  resource_counter.py  test.db
material/calc/: main.py  primary_demand_optimization.py
material/core/: calculate_required_resources.py  calculate_required_resources_test.py  resource_counter.py  resource_counter_test.py
material/db/: config.py  converters.py  database_models_test.py  initialize_db.py  manufacturing.db  models.py  models_test.py  scm.db
material/docs/: flow.md  full_material_graph.mmd  material_flow.puml
material/graph/: base_graph.py  graph_nodes.py  production_graph.py  production_graph_nodes_test.py  production_graph_test.py  production_graph_validator.py  production_node_type.py  sub_graph.py
material/setup/: graph_setup_p1.py  graph_setup_p1_test.py  graph_setup_p2.py  graph_setup_p3.py  production_graph_setup.py
material/visualization/: main.py  mermaid_visualizations.py
scs/: conftest.py  test.db
scs/api/: dto_models.py  (+2 more)
src/: storage.py
tests/: test_material_graph_orm.py
user-docs/: labour-machine-cost.csv  mkdocs.yml  planning_analysis_visualization.ipynb  pyproject.toml
user-docs/data_analyses/: convert_material_data.py  material_cost.ipynb  material_cost.py  material_cost_data.ipynb  material_cost_graph.py  material_costs.csv  material_costs_cleaned.csv  material_costs_cleaned_edited.csv  planning_analysis_visualization.ipynb
user-docs/data_analyses/material/: calculate_required_resources.py  diagram.html  diagram.mmd  diagram_p1.html  diagram_p1.mmd  diagram_p2.html  diagram_p2.mmd  diagram_p3.html  diagram_p3.mmd  graph_setup.py  graph_setup_p1.py  graph_setup_p2.py  graph_setup_p3.py  material_cost_graph.py  process_util.py  production_graph.py  template.html
user-docs/docs/: api.md  api.puml  calculation.md  index.md  optimization.md  pdf.md  python-implementation.md  simulation-information.md
user-docs/docs/calculations/: labour-costs.md  material-costs.md  material-planning.md  storage_cost_analysis.md  workplaces.md  workstation_plan.md
user-docs/docs/diagrams/: api.mmd  p1.html  p1.mmd  ui_mockup.html  ui_mockup.md  ui_mockup.puml
user-docs/docs/images/: class_diagram.puml
user-docs/docs/stylesheets/: pdf.css
user-docs/extras/: domain_detail.puml  material_flow.puml
user-docs/extras/architecture_diagrams/: architecture_overview.puml  architeture_isolated.puml  class_architecture_full_iso.puml  class_architecture_simplified.puml  er_diagram.puml  full_class_architecture.puml  iso_pipeline.puml  total_iso.puml
user-docs/extras/architecture_diagrams/details/: visualization.puml
user-docs/extras/architecture_diagrams/er/: er_diagram.mmd  er_diagram.puml
user-docs/includes/: abbreviations.md
user-docs/site/: 404.html  index.html
user-docs/site/calculation/: index.html
user-docs/site/optimization/: index.html
user-docs/site/python-implementation/: index.html
user-docs/site/search/: search_index.json
user-docs/site/simulation-information/: index.html
user-docs/src/: main.py
(+219 files in other folders)
