[project]
name = "ibsys2scm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "cvxpy>=1.6.4",
    "frozendict>=2.4.6",
    "jupyter>=1.1.1",
    "markdown-include>=0.8.1",
    "matplotlib>=3.10.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "ortools>=9.12.4544",
    "pandas>=2.2.3",
    "psycopg[binary,pool]>=3.2.6",
    "pybase62>=1.0.0",
    "pyomo[optional]>=6.9.1",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.39",
]
