[project]
name = "ibsys2scm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "markdown-include>=0.8.1",
    "matplotlib>=3.10.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]
